# PoolSafe

./: .gitignore  NexusGuard Full Implementation.md  README.md
Figma Design/: DESIGN.md
Figma Design/explore_pools/: code.html
backend/: .gitignore
contracts/: Cargo.toml
contracts/contracts/claims/: Cargo.toml
contracts/contracts/factory/: Cargo.toml
contracts/contracts/factory/src/: lib.rs
contracts/contracts/factory/test_snapshots/test/: test_double_initialize.1.json  test_initialize.1.json
contracts/contracts/governance/: Cargo.toml
contracts/contracts/pool/: Cargo.toml
contracts/contracts/pool/src/: lib.rs
contracts/contracts/pool/test_snapshots/test/: test_claim_rejected_by_votes.1.json  test_create_pool_and_query_totals.1.json  test_double_initialize.1.json  test_expired_claim_is_rejected.1.json  test_expired_claim_rejected.1.json  test_get_all_and_pending_claims.1.json  test_initialize_and_summary.1.json  test_pause_and_unpause.1.json  test_payout_cap_exceeded.1.json  test_roles.1.json  test_submit_claim_and_voting.1.json
contracts/contracts/token/: Cargo.toml
contracts/contracts/voting/: Cargo.toml
contracts/scripts/: deploy-pool-testnet.sh
frontend/: .env.example  package-lock.json  package.json  tailwind.config.ts  tsconfig.json  tsconfig.tsbuildinfo
frontend/components/: FigmaPage.tsx  Footer.tsx  Header.tsx  Layout.tsx  MarketingNav.tsx  Sidebar.tsx  WalletButton.tsx  button.tsx  footer.tsx  header.tsx  wallet-button.tsx
frontend/context/: WalletContext.tsx
frontend/hooks/: useFreighterWallet.ts
frontend/lib/: wallet.tsx
(+27 files in other folders)
