[workspace]
resolver = "2"
members = [
    "contracts/pool",
    "contracts/claims",
    "contracts/voting",
    "contracts/governance",
    "contracts/token",
]

[workspace.dependencies]
soroban-sdk = "22.0.0"
soroban-token-interface = "22.0.0"

[profile.release]
opt-level = "z"
overflow-checks = true
debug = 0
strip = "symbols"
debug-assertions = false
panic = "abort"
codegen-units = 1
lto = true

[profile.release-with-logs]
inherits = "release"
debug-assertions = true
